--- a/Homework_1/BlackPape.ipynb
+++ b/Homework_1/BlackPape.ipynb
@@ -3,13 +3,26 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
    "outputs": [],
    "source": [
-    ""
-   ]
+    "import sympy as sym\n",
+    "from random import randint\n",
+    "\n",
+    "x = sym.symbols('x')\n",
+    "\n",
+    "coefficient = sym.symbols('a')\n",
+    "\n",
+    "def horners_rule_with_for(n):\n",
+    "  if n == 0:\n",
+    "    return\n",
+    "\n",
+    "\n",
+    "coefficients = [ for _ in range(5)]\n",
+    "x"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   }
  ],
  "metadata": {
